--- a/GIT/style.css
+++ b/GIT/style.css
@@ -21,5 +21,8 @@ h1 {
 }
 
 .paragraph-4 {
-    
+    text-align: center;
+    font-size: 24px;
+    font-style: italic;
+    text-shadow: 1px 1px 2px green;
 }
